<resources>
    <string name="app_name"> Nyumbani! </string>
    <string name="title_activity_hospital">HospitalActivity</string>
    <string name="hint_username">Username</string>


    <string name="large_text">
        "There was a huge hogwash of info here but it's no longer there!"
    </string>

    <!-- LoginActivity. -->
    <string name="action_logout">Logout</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">Register</string>
    <string name="err_msg_email">Enter your Email</string>
    <string name="err_msg_email_valid">Email not valid</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add Hostels</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="chose_action">Choose your action</string>
    <string name="already_registered_login">Already registered? login</string>
    <string name="no_registration">If used without registration your score will not be stored</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_home_navigation">Nyumbani!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_social_media">SocialMediaActivity</string>
    <string name="title_activity_post_new">Sign in</string>
    <string name="title_activity_details_maps">Map</string>
</resources>
