<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.muguku.mash.nyumbani.LoginActivity">


    <LinearLayout
        android:background="#eb2980b9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">


        <TextView
            android:id="@+id/app_nam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:textColor="@color/googleColor"
            android:textSize="14pt"
            android:layout_marginBottom="5dp"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">



                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:id="@+id/imageView"
                    android:src="@drawable/otherrentals"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_red_border">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="@dimen/activity_horizontal_margin"

                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textColorPrimary">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:drawableLeft="@drawable/ic_person"
                android:drawableTint="@color/textColorPrimary"
                android:hint="@string/hint_username"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textColorPrimary">

            <EditText
                android:id="@+id/user_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_key"
                android:drawableTint="@color/textColorPrimary"
                android:hint="@string/hint_password" />
        </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:paddingBottom="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true">


                    <Button
                        android:onClick="userLogin"
                        android:id="@+id/btnLogin"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_login"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:background="@drawable/roundbtn3"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/colorPrimaryDark"/>



                    <TextView
                        android:onClick="userReg1"
                        android:layout_marginTop="15dp"
                        android:id="@+id/butonmoja"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:background="@color/facebookColor"
                        android:gravity="center"
                        android:text="@string/btn_link_to_register"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    </ScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>